--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=literalura
-spring.datasource.url=jdbc:postgresql://HOST/BASE-DE-DATOS
-spring.datasource.username=usuario
-spring.datasource.password=contraseña
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 #Se encarga de los cambios automaticos que se hacen en la base
